--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 CS405 Project 1 3D Animations using ChatGPT.pdf
 Task1 Cube.png
 Task2 Cube.png
+~$ 405 PROJECT 1 REPORT.docx
+CS 405 PROJECT 1 REPORT.docx
+github-link.txt
+.gitignore
